--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,28 +2,32 @@
 <html lang="en">
 
 <head>
-    <%- include('./partials/head') %>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home Page</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* Custom CSS for specific styles */
         .card {
             border: 2px solid #000;
-            border-radius: 10px; 
+            border-radius: 10px;
         }
+
         .card img {
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             object-fit: cover;
-            height: 200px; 
+            height: 200px;
         }
     </style>
-
 </head>
 
 <body>
-    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
             <a class="navbar-brand" href="/">Blogify</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,47 +37,47 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <% if (locals.user) { %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/blog/addBlog">Add Blog</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/blog/addBlog">Add Blog</a>
+                    </li>
                     <% } %>
                 </ul>
                 <ul class="navbar-nav">
                     <% if (locals.user) { %>
-                        <li class="nav-item">
-                            <a class="nav-link" style="margin-right: 15px;">Welcome, <%= user.fullName%></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/user/logout" style="margin-right: 15px;">Logout</a>
-                        </li>
-                    <% } else {%>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/user/signin">Sign-in</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/user/signup">Create Account</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Welcome, <%= user.fullName%></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/logout">Logout</a>
+                    </li>
+                    <% } else { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/signin">Sign-in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/signup">Create Account</a>
+                    </li>
                     <% } %>
                 </ul>
             </div>
         </div>
     </nav>
-    
+
     <% if (locals.error) { %>
-        <div class="container mt-4">
-            <div class="alert alert-danger" role="alert">
-                <%= locals.error %>
-            </div>
-        </div>
-    <% } %>
-    
-   <!-- for the cards  -->
     <div class="container mt-4">
-        <div class="row row-cols-3">
+        <div class="alert alert-danger" role="alert">
+            <%= locals.error %>
+        </div>
+    </div>
+    <% } %>
+
+    <!-- Cards Section -->
+    <div class="container mt-4">
+        <div class="row">
             <% blogs.forEach(blog => { %>
-            <div class="col mb-4">
+            <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="<%= blog.coverImageUrl %>" class="card-img-top" >
+                    <img src="<%= blog.coverImageUrl %>" class="card-img-top" alt="<%= blog.title %>">
                     <div class="card-body">
                         <h5 class="card-title"><%= blog.title %></h5>
                         <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
@@ -84,8 +88,10 @@
         </div>
     </div>
 
-    <%- include('./partials/scripts') %>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 
 </html>
